# esp32-led-controller-vue3-quasar

./: .gitignore  README.md  sdkconfig  sdkconfig.old
front/led-quasar/: README.md  package.json  quasar.conf.js
front/led-quasar/src/css/: app.scss
front/led-quasar/src/layouts/: MainLayout.vue
front/led-quasar/src/pages/: Index.vue
main/: CMakeLists.txt  esp_rest_main.c  rest_server.c
